Got julia to work, yay

--- a/Code/julia_plotting.ipynb
+++ b/Code/julia_plotting.ipynb
@@ -498,10 +498,47 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19.919517102615636"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "c₂_fixed = -(w₁ * n₁)/ (ω[2,2] - f[2,2] * n₁ - w₁)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "c₂_fixed = -(w₁ * n₁)/ (ω[2,2] - f[2,2] * n₁ - w₁)\n",
-    "c₁_fixed = @. (-w₂*c₂)/(ω[1,1]-f[1,1] * cₜ);"
+    "# c₁_fixed = @. (-w₂*c₂)/(ω[1,1]-f[1,1] * cₜ);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-99.49748743718592"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "c₁_fixed = -w₂/w₁ * ((n₁*n₂)/(n₁ + n₂))"
    ]
   },
   {
