Preparing for a new model

--- a/Code/julia/quickndirty.ipynb
+++ b/Code/julia/quickndirty.ipynb
@@ -195,11 +195,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "468f59b5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "two_var_fixed = "
+   ]
   },
   {
    "cell_type": "code",
